Add better postorder test